objects/vlocity_cmt__Cart__c.object
<CustomObject>
    <description>An abandoned shopping cart tracked for a lead, account or contact. Used to pursue follow-up actions with the suspect, prospect or customer.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that identifies the customer for the cart.</description>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cart</relationshipLabel>
        <relationshipName>Cart</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CartCreatedDate__c</fullName>
        <description>Date and time when this cart was first created in the source system.</description>
        <label>Cart Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CartLastModifiedDate__c</fullName>
        <description>Date and time when this cart was last modified in the source system.</description>
        <label>Cart Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CartUrl__c</fullName>
        <description>URL to this cart in the source system.</description>
        <label>Cart URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Channel__c</fullName>
        <description>Channel through which this cart was captured.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CheckoutCompletedDate__c</fullName>
        <description>Date and time when checkout for this cart was completed.</description>
        <label>Checkout Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the contact who is (or was) the shopper on this cart.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cart</relationshipLabel>
        <relationshipName>Cart</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the lead for which the cart has been captured.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cart</relationshipLabel>
        <relationshipName>Cart</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <description>Total non-recurring charges to be paid up front at check-out for the cart.</description>
        <label>Total: One Time Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProgressPercentage__c</fullName>
        <description>An estimated percentage completion through the shopping and check-out process for this cart.</description>
        <label>Progress</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <description>Total monthly recurring charges for everything in the cart.</description>
        <label>Total: Monthly Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShopperIpAddress__c</fullName>
        <description>IP address of the shopper for this cart.</description>
        <label>Shopper IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceSystem__c</fullName>
        <description>The name of the source system that captured the cart.</description>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Status of this cart.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cart</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cart Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cart</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>